Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins-ns
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa
      containers:
        - name: jenkins
          image: shrouk20180287/jenkins-img:v2.0
          ports:
            - name: httpport
              containerPort: 8080
          volumeMounts:

            - name: docker-socket
              mountPath: /var/run/docker.sock
      volumes:

        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
